fix z-index

--- a/css/main.css
+++ b/css/main.css
@@ -428,7 +428,7 @@ a {
   border-color: transparent;
   margin-left: auto;
   fill: currentColor;
-  z-index: 4;
+  z-index: 2;
 }
 
 @media screen and (min-width: 768px) {
@@ -638,6 +638,7 @@ a {
     line-height: 1.18;
     font-weight: 500;
     letter-spacing: 0.02em;
+    color: var(--brand-color);
     padding: 0;
   }
 }
@@ -692,7 +693,7 @@ a {
     left: 0;
     width: 100%;
     height: 100vh;
-    z-index: 3;
+    z-index: 1;
     background-color: var(--white-color);
   }
 }
@@ -1674,7 +1675,7 @@ a {
   height: 100vh;
   left: 0px;
   top: 0px;
-  z-index: 1;
+  z-index: 2;
   overflow-y: scroll;
   -webkit-transition: 0.5s linear;
   transition: 0.5s linear;
