--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -37,7 +37,7 @@
     @media (max-width: 767px) {
       @include text(34px, 1.18, 500);
       letter-spacing: 0.02em;
-
+      color: var(--brand-color);
       padding: 0;
     }
   }
