--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -13,7 +13,7 @@
     margin-left: auto;
     fill: currentColor;
 
-    z-index: 4;
+    z-index: 2;
 
     @include respond-to(tablet) {
       display: none;
