--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -19,7 +19,7 @@
 
       width: 100%;
       height: 100vh;
-      z-index: 3;
+      z-index: 1;
 
       background-color: var(--white-color);
     }
