--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -4,7 +4,7 @@
   height: 100vh;
   left: 0px;
   top: 0px;
-  z-index: 1;
+  z-index: 2;
   overflow-y: scroll;
 
   transition: 0.5s linear;
